--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
   "author": "David Borrayo <davidalejandroborrayo@gmail.com>",
   "license": "MIT",
   "bin": {
-    "random-msg": "./bin/global.js"
+    "random-msg": "bin/global.js"
   },
-  "preferGlobal": true
+  "preferGlobal": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bomogtx/platzi-npmcourse.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bomogtx/platzi-npmcourse/issues"
+  },
+  "homepage": "https://github.com/bomogtx/platzi-npmcourse#readme"
 }
